support 부분 레이아웃 조금 수정

--- a/app/project/templates/support/add.html
+++ b/app/project/templates/support/add.html
@@ -58,20 +58,20 @@
                        </div>
                     </div>
                  </fieldset>
-                 <fieldset style="border-bottom: none;">
-                    <div class="form-group">
-                       <label for="input-id-1" class="col-sm-1 control-label" style="line-height: 35px;">글쓴이</label>
-                       <div class="col-sm-3">
-                          <input id="input-id-1" type="text" class="form-control">
-                       </div>
-                       <div class="col-sm-3"></div>
-                       <label for="input-id-1" class="col-sm-1 control-label" style="line-height: 35px;">비밀번호</label>
-                       <div class="col-sm-3">
-                          <input id="input-id-1" type="text" class="form-control">
-                       </div>
-                    </div>
-                 </fieldset>
-                 <hr>
+                 <!--<fieldset style="border-bottom: none;">-->
+                 <!--   <div class="form-group">-->
+                 <!--      <label for="input-id-1" class="col-sm-1 control-label" style="line-height: 35px;">글쓴이</label>-->
+                 <!--      <div class="col-sm-3">-->
+                 <!--         <input id="input-id-1" type="text" class="form-control">-->
+                 <!--      </div>-->
+                 <!--      <div class="col-sm-3"></div>-->
+                 <!--      <label for="input-id-1" class="col-sm-1 control-label" style="line-height: 35px;">비밀번호</label>-->
+                 <!--      <div class="col-sm-3">-->
+                 <!--         <input id="input-id-1" type="text" class="form-control">-->
+                 <!--      </div>-->
+                 <!--   </div>-->
+                 <!--</fieldset>-->
+                 <!--<hr>-->
                  
                  <div class="cont">
                      <textarea placeholder="내용입력"></textarea>
