--- a/app/project/templates/support/detail.html
+++ b/app/project/templates/support/detail.html
@@ -105,9 +105,9 @@
                <div class="col-sm-9" style="margin: 15px;">
                   <div class="media-body">
                      <div class="pull-right">2021/03/14 19:05:44</div>
-                     <h4 class="media-heading">기술 엔지니어</h4>
+                     <h4 class="media-heading">JENNY</h4>
                      <p>
-                        <small>서버관련질문</small>
+                        <small>기술 엔지니어</small>
                      </p>
                   </div>
                   <div>
@@ -125,7 +125,7 @@
                      <div class="pull-right">2021/03/14 10:35:14</div>
                      <h4 class="media-heading">JENNY</h4>
                      <p>
-                        <small>서버관련질문</small>
+                        <small>기술 엔지니어</small>
                      </p>
                   </div>
                   <div>
