--- a/app/project/templates/support/list.html
+++ b/app/project/templates/support/list.html
@@ -65,7 +65,7 @@
                   </div>
                </div>
                <div class="container">
-                <button type="submit" class="btn btn-sm btn-inverse" style="padding-right: 18px; padding-left: 18px; padding-top: 7px; padding-bottom: 7px;"><a href="supportAdd.html" id="whiteA">게시글 추가</a></button>
+                <button type="submit" class="btn btn-sm btn-inverse" style="padding-right: 18px; padding-left: 18px; padding-top: 7px; padding-bottom: 7px;"><a href="/support/add" id="whiteA">게시글 추가</a></button>
                 </div>
             </div>
          </div>
