front 스타일 수정

--- a/app/project/templates/new/login.html
+++ b/app/project/templates/new/login.html
@@ -30,7 +30,7 @@
                   <img src="/static/app/img/logo.png" alt="Image" class="block-center img-rounded">
                </a>
                <p class="text-center mt-lg">
-                  <strong>LOGIN</strong>
+                  <strong>Login</strong>
                </p>
             </div>
             
@@ -55,7 +55,7 @@
                      <div class="pull-right"><a href="recover.html" class="text-muted" style="text-decoration: none;">Forgot your password?</a>
                      </div>
                   </div>
-                  <input type="submit" value="Log In" class="btn btn-lg btn-success">
+                  <input type="submit" value="Log In" class="btn btn-lg btn-success login_btn_submit">
                   <div style="padding-top: 10px; text-align: center;">
                      <p style="display: inline;">Don't have an account yet?  </p>
                      <a href="{{ url_for('users.register') }}">Sign up for free!</a>
