--- a/app/project/templates/support/add.html
+++ b/app/project/templates/support/add.html
@@ -50,11 +50,17 @@
              </div>
             <div class="row">
                 <hr> 
+                
                 <fieldset>
                     <div class="form-group">
-                       <label for="input-id-1" class="col-sm-1 control-label" style="line-height: 35px;">제목</label>
+                       <label for="input-id-1" class="col-sm-1 control-label" style="line-height: 35px;">타입</label>
                        <div class="col-sm-10">
-                          <input id="input-id-1" type="text" class="form-control">
+                          <select class="form-control">
+                    <option value="0">기술지원</option>
+                    <option value="1">서버관련</option>
+                    <option value="2">요금관련</option>
+                    <option value="3">기타</option>
+                </select>
                        </div>
                     </div>
                  </fieldset>
