--- a/app/project/templates/login-multi.html
+++ b/app/project/templates/login-multi.html
@@ -66,7 +66,9 @@
                                     <span class="fa fa-check"></span>Remember Me</label>
                               </div>
                            </div>
-                           <button type="submit" class="btn btn-block btn-success">Login</button>
+                           <div class="col-md-12">
+                              <button type="submit" class="btn btn-block btn-success">Login</button>
+                           </div>\
                         </form>
                      </div>
                   </div>
