--- a/app/project/templates/support/detail.html
+++ b/app/project/templates/support/detail.html
@@ -52,21 +52,13 @@
              </div>
             <div class="row">
                 <hr> 
-                <fieldset>
-                    <div class="form-group">
-                       <label for="input-id-1" class="col-sm-1 control-label" style="line-height: 35px;">제목</label>
-                       <div class="col-sm-10">
-                          <input id="input-id-1" type="text" class="form-control" value="서버 재부팅 에러 문제">
-                       </div>
-                    </div>
-                 </fieldset>
-                 
+            
                  
                  <div class="col-sm-1"></div>
                  <div class="col-sm-10">
                     <div class="cont">
                      <textarea placeholder="내용입력">
-서포트 디테일 페이지
+관리자에게 답장이 될 메세지
                      </textarea>
                      </div>
                   </div>
@@ -123,13 +115,13 @@
                <div class="col-sm-9" style="margin: 15px;">
                   <div class="media-body">
                      <div class="pull-right">2021/03/14 10:35:14</div>
-                     <h4 class="media-heading">JENNY</h4>
+                     <h4 class="media-heading">User</h4>
                      <p>
-                        <small>기술 엔지니어</small>
+                        <small>사용자</small>
                      </p>
                   </div>
                   <div>
-                     리눅스 ls - al 을 입력하는 도중에 command not found 라는 오류가 나타났습니다. 리눅스에 파일이 손상된 거 같습니다. 수정 부탁드립니다.
+                     <p>weofijweoifjwoweij</p>
                   </div>
                </div>
             </fieldset>   
