--- a/backend/app/project/static/app/css/app.css
+++ b/backend/app/project/static/app/css/app.css
@@ -470,7 +470,7 @@ body {
 }
 .navbar-top .navbar-header .brand-logo {
   display: block;
-  padding: 14px 15px;
+  /* padding: 14px 15px; */
 }
 .navbar-top .navbar-header .brand-logo-collapsed {
   display: none;
@@ -5196,4 +5196,5 @@ fieldset[disabled] .fc-button.active {
     overflow: hidden !important;
   }
 }
+
 
