--- a/backend/app/project/static/templates/_menu.html
+++ b/backend/app/project/static/templates/_menu.html
@@ -4,7 +4,7 @@
     <div class="navbar-header">
       <a href="/" class="navbar-brand">
          <div class="brand-logo">
-            <img src="/static/app/img/logo.png" alt="App Logo" class="img-responsive">
+            <img src="/static/app/img/last2.png" alt="App Logo" class="img-responsive">
          </div>
          <div class="brand-logo-collapsed">
             <img src="/static/app/img/logo-single.png" alt="App Logo" class="img-responsive">
