테마 통일, 간단한 디자인 수정, support 에러 해결

--- a/backend/app/project/templates/keypair/add.html
+++ b/backend/app/project/templates/keypair/add.html
@@ -36,7 +36,8 @@
           {{ form.name.label }}
           {{ render_field(form.name, class="form-control") }}
         </div> 
-        <input type="submit" value="Add Item" class="btn btn-lg btn-success">
+        <input type="submit" value="Add Item" class="mb-sm btn btn-default">
+         
     </form>
                    </div>
                 </div>
