--- a/backend/app/project/templates/keypair/list.html
+++ b/backend/app/project/templates/keypair/list.html
@@ -59,7 +59,10 @@
                                         {{ item.fingerprint}}
                                       </td> 
                                       <td>
-                                        <a onclick="return confirm('정말로 삭제할까요?')" href="{{ url_for('keypair.delete', keypair_id=item.id) }}">Delete</a>
+
+                                        <button type="button" class="btn btn-oval btn-danger">
+                                           <a onclick="return confirm('정말로 삭제할까요?')" href="{{ url_for('keypair.delete', keypair_id=item.id) }}" style="color: white; text-decoration: none;">Delete</a>
+                                          </button>
                                       </td> 
                                     </tr>
                                     {% endfor %}
@@ -75,8 +78,10 @@
             </div>
             <!-- END row-->
             <div class="container">
-               <a href="{{ url_for('keypair.add') }}">add a new keypair</a>.</p>
-            </div> 
+               <a href="{{ url_for('keypair.add') }}" class="mb-sm btn btn-default" style="align-items: center;">키페어 추가</a>
+            </div>
+
+         
          </div>
       </section> 
    </div> 
