--- a/backend/app/project/templates/secgroup/list.html
+++ b/backend/app/project/templates/secgroup/list.html
@@ -74,9 +74,12 @@
                 
             </div>
             <!-- END row-->
+            
             <div class="container">
-               <p>보안 그룹을 더 생성할 수 있습니다.<a href="{{ url_for('secgroup.add') }}">add a new security group</a>.</p>
+               <p>보안 그룹을 더 생성할 수 있습니다.</p>
+               <a href="{{ url_for('secgroup.add') }}" class="mb-sm btn btn-default" style="align-items: center;">방화벽 생성</a>
             </div>
+            
             
 
          </div>
