--- a/frontend/views/dashboard.html
+++ b/frontend/views/dashboard.html
@@ -51,7 +51,7 @@
                </div>
          
          
-            <a href="cloudadd.html" class="mainbtn">add cloud</a>
+            <a href="cloudadd.html" class="mb-sm btn btn-inverse">add cloud</a>
          </div>
       </section> 
    </div> 
