--- a/backend/app/project/templates/cloud/list.html
+++ b/backend/app/project/templates/cloud/list.html
@@ -123,7 +123,7 @@
             </div>
             <!-- END row-->
             <div class="container">
-               <a href="{{ url_for('cloud.add_cloud') }}" class="mainbtn" style="align-items: center;">클라우드 추가</a>
+               <a href="{{ url_for('cloud.add_cloud') }}" class="mb-sm btn btn-inverse" style="align-items: center;">클라우드 추가</a>
             </div>
             
 
