--- a/backend/app/project/templates/support/detail.html
+++ b/backend/app/project/templates/support/detail.html
@@ -57,9 +57,7 @@
                  <div class="col-sm-1"></div>
                  <div class="col-sm-10">
                     <div class="cont">
-                     <textarea placeholder="내용입력">
-관리자에게 답장이 될 메세지
-                     </textarea>
+                     <textarea placeholder="관리자에게 답장이 될 메세지"></textarea>
                      </div>
                   </div>
                   <div class="col-sm-1"></div>
