--- a/backend/app/project/templates/secgroup/ruleedit.html
+++ b/backend/app/project/templates/secgroup/ruleedit.html
@@ -48,7 +48,7 @@
       {{ form.toport.label }}
       {{ render_field(form.toport, class="form-control", value=detail.toport) }}
     </div>
-    <input type="submit" value="Edit Item" class="btn btn-lg btn-success">
+    <input type="submit" value="Edit Item" class="mb-sm btn btn-default">
 </form>
                    </div>
                 </div>
