--- a/backend/app/project/templates/user/profile.html
+++ b/backend/app/project/templates/user/profile.html
@@ -24,9 +24,9 @@
       <section id="content-area">
          <div class="main-content">
             <div style="margin-bottom: 25px;">
-               <h3>사용자 변경
+               <h3>사용자 페이지
                  <br>
-                 <small>Support Page</small>
+                 <small>사용자 관련 변경 사항</small>
                </h3>
              </div>
              <div class="card mb-3" style="max-width: 30rem;">
