--- a/backend/app/project/templates/secgroup/list.html
+++ b/backend/app/project/templates/secgroup/list.html
@@ -25,7 +25,7 @@
          <div class="main-content">
             <h3>방화벽
                <br>
-               <small>방화벽 리스트</small>
+               <small>생성된 방화벽 목록</small>
             </h3>
             <!-- START row-->
             <div class="row">
@@ -47,7 +47,8 @@
                                <tr>
                                
                                  <td>
-                                   <a href="/secgroup/{{item.id}}/detail">{{ item.name }}</a>
+                                 <button type="button" class="btn btn-oval btn-inverse"><a href="/secgroup/{{item.id}}/detail" style="color: white;">{{ item.name }}</a></button>
+                                   <!-- <a href="/secgroup/{{item.id}}/detail">{{ item.name }}</a> -->
                                  </td>
                                  <td>
                                    {{ item.sec_group_id}}
