--- a/backend/app/project/templates/secgroup/detail.html
+++ b/backend/app/project/templates/secgroup/detail.html
@@ -68,7 +68,7 @@
 
                                  <div class="btn-group mb-sm open">
                                     <button type="button" class="btn btn-secondary dropdown-toggle">Actions</button>
-                                    <button type="button" data-toggle="dropdown" class="btn btn-secondary dropdown-toggle">
+                                    <button data-toggle="dropdown"data-play="pullDown"  class="btn btn-secondary dropdown-toggle" >
                                        <span class="caret"></span>
                                     </button>
                                     <ul role="menu" class="dropdown-menu">
