--- a/backend/app/project/templates/keypair/list.html
+++ b/backend/app/project/templates/keypair/list.html
@@ -23,10 +23,13 @@
    <div id="wrapper" class="wrapper">
       <section id="content-area">
          <div class="main-content">
-            <h3>Keypair
-               <br>
-               <small>키페어 리스트</small>
-            </h3>
+            <div style="margin-bottom: 55px;">
+               <h3>Keypair
+                 <br>
+                 <small>키페어 리스트</small>
+               </h3>
+             </div>
+             
             {% include "_notifier.html" %}
             <!-- START row-->
             <div class="row">
