--- a/backend/app/project/templates/secgroup/list.html
+++ b/backend/app/project/templates/secgroup/list.html
@@ -23,10 +23,12 @@
       <section id="content-area">
          {% include "_notifier.html" %}
          <div class="main-content">
-            <h3>방화벽
-               <br>
-               <small>생성된 방화벽 목록</small>
-            </h3>
+            <div style="margin-bottom: 55px;">
+               <h3>방화벽
+                 <br>
+                 <small>생성된 방화벽 목록</small>
+               </h3>
+             </div>
             <!-- START row-->
             <div class="row">
                <div class="col-lg-12">
