cloud detail monitoring

--- a/backend/app/project/templates/cloud/add.html
+++ b/backend/app/project/templates/cloud/add.html
@@ -91,10 +91,11 @@
               <div class="form-group">
                  <label class="col-sm-2 control-label">Hostname</label>
                  <div class="col-sm-6">
-                    <input type="text" name="Hostname" required="required" class="form-control" required>
+                    <input width="200" type="text" name="Hostname" required="required" placeholder="yourdomain" class="form-control" required><span>.some-cloud.net</span>
                  </div>
               </div>
            </fieldset>
+           
              
              <div class="row">
                 <div class="col-lg-12">
