Cloud Detail url

--- a/backend/app/project/templates/cloud/list.html
+++ b/backend/app/project/templates/cloud/list.html
@@ -64,7 +64,7 @@
                                   <td>
                                     {% if item.Cloud.status == "Running" %}
 
-                                    <button type="button" class="btn btn-oval btn-inverse"> <a href="/cloud/detail/{{ item.Cloud.id}}" style="color: white;">{{ item.Cloud.hostname }}</a></button>
+                                    <button type="button" class="btn btn-oval btn-inverse"> <a href="/cloud/{{ item.Cloud.id}}/detail" style="color: white;">{{ item.Cloud.hostname }}</a></button>
                                    
 
                                     {% else %}
